Fix table colors in dark mode

--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -121,6 +121,10 @@ html {
     @apply dark:text-blue-500;
   }
 
+  .prose table {
+    @apply text-gray-1000 dark:text-gray-50;
+  }
+
   /* the kg-embed-card gets applied to iframes sent from Ghost. this preserves a good video aspect ratio */
   .prose .kg-embed-card {
     @apply my-4;
